[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Attacks/JungleEnemyAttacks/StickyFluid.png" type="Texture" id=1]
[ext_resource path="res://Assets/Attacks/JungleEnemyAttacks/StickyFluid2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Attacks/JungleEnemyAttacks/StickyFluid3.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Scripts/Attacks/EnemyAttacks/StickyLiquid.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 167.4

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="StickyLiquid" type="Area2D" groups=[
"Enemy_ranged_attack",
]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WeaponImage" type="AnimatedSprite" parent="."]
position = Vector2( 6.29387, -10.0701 )
scale = Vector2( 1.24301, 1.23419 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="VisiblityTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_StickyLiquid_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_StickyLiquid_body_entered"]
[connection signal="timeout" from="VisiblityTimer" to="." method="_on_VisiblityTimer_timeout"]
